# hardware_open_source

./: README.md
high_precision_capacitance_measuring_instrument/project/: .mxproject  fceliang.ioc
high_precision_capacitance_measuring_instrument/project/Core/Inc/: stm32f1xx_it.h  tim.h
high_precision_capacitance_measuring_instrument/project/Core/Src/: gpio.c  i2c.c  main.c  stm32f1xx_it.c  tim.c
high_precision_capacitance_measuring_instrument/project/MDK-ARM/: .clangd  fceliang+fceliang.cbuild.yml  fceliang+fceliang.cprj  fceliang.cbuild-idx.yml  fceliang.cbuild-pack.yml  fceliang.cbuild-set.yml  fceliang.cproject.yml  fceliang.csolution.yml  fceliang.map  fceliang.uvguix.wyh  fceliang.uvoptx  fceliang.uvprojx  fceliang_fceliang.sct  startup_stm32f103x6.lst  vcpkg-configuration.json
high_precision_capacitance_measuring_instrument/project/MDK-ARM/RTE/_fceliang/: RTE_Components.h
high_precision_capacitance_measuring_instrument/project/MDK-ARM/fceliang/: fceliang.axf  fceliang.build_log.htm  fceliang.hex  fceliang.htm  fceliang.lnp  fceliang.map  fceliang_fceliang.dep  flash.d  gpio.crf  gpio.d  i2c.crf  i2c.d  key.d  log.crf  log.d  main.crf  main.d  oled.crf  oled.d  startup_stm32f103x6.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_i2c.crf  stm32f1xx_hal_i2c.d  stm32f1xx_hal_msp.crf  stm32f1xx_hal_msp.d  (+20 more)
high_precision_capacitance_measuring_instrument/project/MDK-ARM/tmp/fceliang/fceliang/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
high_precision_capacitance_measuring_instrument/project/User/: flash.c  flash.h  key.c  key.h  log.c  log.h  oled.c  oled.h  oledfont.h  pch.h
